Fix row layout overflow in some field cases

--- a/src/resources/src/scss/_input.scss
+++ b/src/resources/src/scss/_input.scss
@@ -244,6 +244,7 @@
     padding: 4px 10px;
     border-top: 1px solid rgba(0,0,0,0.07);
     background: #fff;
+    overflow: hidden;
 
     & > .field > .heading {
         display: none;
